--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "./node_modules/.bin/netlify/lambda serve src",
     "dev": "nodemon server",
-    "build": "npm ci"
+    "build": "./node_modules/.bin/netlify/lambda serve src"
   },
   "keywords": [],
   "author": "",
